src/assets/style/style.scss
@import './variables/breakpoints';
@import './variables/mixins';
@import './variables/colors';
@import './variables/icons';

* {
  border: 0;
  outline: 0;
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}

:root {
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;

  color-scheme: light dark;
  --color: rgba(255, 255, 255, 0.87);
  --background-color: #242424;
  color: var(--color);
  background-color: var(--background-color);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
  -webkit-tap-highlight-color:  transparent;
}

body {
  padding: 1rem 0;
  display: grid;
  align-items: center;
  line-height: 1;
}

.card {
  display: flex;
  min-height: 20rem;
  flex-direction: column;

  &__footer {
    width: 100%;
    bottom: 0;
    margin-top: auto;
    padding: 2rem 2rem 1.5rem;
    display: flex;
    position: fixed;
    align-items: center;
    justify-content: center;
    pointer-events: none;

    * {
      pointer-events: all;
    }
  }
}

.title {
  padding: 1rem 2rem;
  margin-bottom: 0.5rem;
  font-size: x-large;
}

.list {
  width: 100%;
  position: relative;
  padding-bottom: 5rem;

  &-item {
    z-index: 1;
    width: 100%;
    display: flex;
    position: relative;
    align-items: center;
    padding: 1rem 2rem;
    background-color: var(--background-color);

    * ~ * {
      margin-left: 1rem;
    }

    & ~ & {
      border-top: 1px solid rgba(255, 255, 255, 0.1);
    }

    &:last-child {
      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
    }

    &__checkbox,
    &__remove {
      flex-shrink: 0;
    }
  }

  &:empty::before {
    content: attr(data-empty);
    text-align: center;
    font-style: italic;
    display: block;
    opacity: 0.5;
    padding: 1rem;
  }

  &-move {
    @include transition(0.2s);
  }

  &-enter {
    &-active {
      @include transition(0.2s);
    }

    &-from {
      opacity: 0;
      transform: scale(0.6);
    }
  }

  &-leave {
    &-to {
      opacity: 0;
      transform: scale(0.6);
    }

    &-active {
      @include transition(0.2s);
      position: absolute;
      z-index: 0;
    }
  }
}

label.checkbox {
  width: 1.25rem;
  height: 1.25rem;
  display: flex;
  position: relative;

  input[type=checkbox] {
    width: 100%;
    height: 100%;
    opacity: 0;
    position: absolute;

    & ~ .checkmark {
      width: 100%;
      height: 100%;
      margin: 0;
      padding: 3px;
      display: flex;
      cursor: pointer;
      position: relative;
      border-radius: 50%;
      align-items: center;
      justify-content: center;
      border: 2px solid $grey;
      @include transition(75ms);

      &::before {
        width: 0%;
        height: 0%;
        content: '';
        flex-shrink: 1;
        display: block;
        position: relative;
        border-radius: 50%;
        background-color: $blue;
        @include transition(0.1s);
      }
    }

    &:checked ~ .checkmark {
      border-color: $blue;

      &::before {
        width: 100%;
        height: 100%;
        content: '';
      }
    }
  }
}

.input {
  width: 100%;
  cursor: text;
  display: inline-block;
  line-height: 1.25;
  //line-height: 2.375rem;
  word-break: break-word;

  &[placeholder]:empty::before {
    content: attr(placeholder);
    color: rgba(255, 255, 255, 0.35);
  }
}

.icon {
  width: 1rem;
  height: 1rem;

  &::before {
    content: '';
    width: 100%;
    height: 100%;
    display: block;
  }

  &.trash::before {
    @include icon($trash, $grey);
  }

  &-button {
    cursor: pointer;
    
    &::before {
      @include transition(0.15s);
    }
  }
}

.button {
  padding: 1rem;
  font-size: 1rem;
  font-weight: 600;
  cursor: pointer;
  display: flex;
  user-select: none;
  align-items: center;
  background-color: $blue;
  @include transition(75ms);

  &-icon::before {
    width: 1rem;
    height: 1rem;
    content: '';
    color: white;
    display: inline-block;
    position: relative;
    font-size: 2rem;
    font-weight: 100;
    line-height: 0.5625;
    @include icon($plus, white);
  }

  &-rounded {
    border-radius: 2rem;
  }

  &__text {
    color: white;
    margin: 0 1rem;
    display: none;
  }
}

@media (hover: hover) {
  label.checkbox {
    input[type=checkbox] {
      & ~ .checkmark {
        &:hover {
          border-color: darken($grey, 10%);
        }
      }
  
      &:checked ~ .checkmark {
        &:hover {
          border-color: darken($blue, 10%);
  
          &::before {
            background-color: darken($blue, 10%);
          }
        }
      }
    }
  }

  .icon {
    &-button {
      &:hover {
        &::before {
          background-color: darken($grey, 10%);
        }

        &.trash::before {
          background-color: $red;
        }
      } 
    }
  }

  .button {
    &:hover {
      background-color: darken($blue, 10%);
    }
  }
}

@media (min-width: $sm) {
  body {
    padding: 2rem;
  }

  .container {
    display: grid;
    align-items: center;
    justify-content: center;
    min-height: calc(100vh - 4rem);
  }

  .card {
    width: 100vw;
    padding: 2rem;
    min-width: 30rem;
    border-radius: 1rem;
    max-width: calc($sm - 4em);
    background-color: rgba(255, 255, 255, 0.05);
    @include shading;

    &__footer {
      padding: 2rem 0 0;
      position: sticky;
      bottom: 2rem;
      z-index: 1;
    }
  }

  .title {
    padding: 1rem;
    margin-bottom: 2rem;
    font-size: 1.875rem;
  }
  
  .list {
    width: 100%;
    display: grid;
    align-items: center;
    padding-bottom: 0;
  
    &-item {
      padding: 1.5rem;
      font-size: 1.25rem;
      border-radius: 0.5rem;
      background-color:rgba(255, 255, 255, 0.1);
      @include shading;

      * ~ * {
        margin-left: 1.5rem;
      }
  
      &:not([class*=leave-active]) ~ & {
        margin-top: 1rem;
        border: 0;
      }

      &:last-child {
        border: 0;
      }
    }

    &:empty::before {
      padding: 1.75rem;
    }
  }
  
  label.checkbox {
    width: 1.375rem;
    height: 1.375rem;
  }

  .input {
    line-height: 1.2;
  }

  .icon-button {
    width: 1.125rem;
    height: 1.125rem;
  }

  .button {
    @include shading;

    &__text {
      display: block;
    }
  }
}

@media (prefers-color-scheme: light) {
  :root {
    --color: #333333;
    --background-color:#ffffff;
  }

  .input[placeholder]:empty::before {
    color: rgba(0, 0, 0, 0.35);
  }

  .card {
    background-color: rgba(255, 255, 255, 0.5);
  }

  .list {
    &-item {
      background-color:#ffffff;

      & ~ & {
        border-top: 1px solid rgba(0, 0, 0, 0.1);
      }

      &:last-child {
        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
      }
    }
  }

  @media (min-width: $sm) {
    :root {
      background-color: rgba(0, 0, 0, 0.1);
    }

    .list-item {
      & ~ & {
        border: 0;
      }

      &:last-child {
        border: 0;
      }
    }
  }
}

